--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,6 +74,19 @@ jobs:
         helm repo update
         helm pull kubernetes-dashboard/kubernetes-dashboard --untar --destination "helmcharts/${{ steps.timestamp.outputs.timestamp }}"
 
+    - name: Load Helm Chart Images into Docker
+      run: |
+        CHARTS_DIR="./helmcharts/${{ steps.timestamp.outputs.timestamp }}"
+        GHCR_REPO="ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}"
+        for file in $CHARTS_DIR/*.tgz; do
+          chart_name=$(basename "$file")
+          docker load -i "$file"
+          docker tag "$chart_name" "$GHCR_REPO/$chart_name"
+        done
+
+      - name: Push Helm Charts to GHCR
+        run: docker push "$GHCR_REPO/*"
+
     - name: Authenticate with GHCR
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
