--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -73,19 +73,14 @@ jobs:
         helm repo add kubernetes-dashboard https://kubernetes.github.io/dashboard/
         helm repo update
         helm pull kubernetes-dashboard/kubernetes-dashboard --untar --destination "helmcharts/${{ steps.timestamp.outputs.timestamp }}"
-
-    - name: Load Helm Chart Images into Docker
+        
+    - name: Commit Helm Charts to GitHub
       run: |
         CHARTS_DIR="./helmcharts/${{ steps.timestamp.outputs.timestamp }}"
-        GHCR_REPO="ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}"
-        for file in $CHARTS_DIR/*.tgz; do
-          chart_name=$(basename "$file")
-          docker load -i "$file"
-          docker tag "$chart_name" "$GHCR_REPO/$chart_name"
-        done
-
-    - name: Push Helm Charts to GHCR
-      run: docker push "$GHCR_REPO/*"
-
-    - name: Authenticate with GHCR
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add -A
+        git commit -m "Update Helm charts ($(date +"%Y-%m-%d %H:%M:%S"))"
+        git push
+   
+    
