--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -81,6 +81,6 @@ jobs:
         git config --global user.name "GitHub Actions"
         git add -A
         git commit -m "Update Helm charts ($(date +"%Y-%m-%d %H:%M:%S"))"
-        git push
+       git push https://$GITHUB_ACTOR:$YOUR_TOKEN@github.com/vamshionrails/your-repo.git HEAD:main
    
     
