--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -81,6 +81,6 @@ jobs:
         git config --global user.name "GitHub Actions"
         git add -A
         git commit -m "Update Helm charts ($(date +"%Y-%m-%d %H:%M:%S"))"
-        git push https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$USERNAME/$REPO_NAME HEAD:main
+        git push https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/vamshionrails/$REPO_NAME HEAD:main
    
     
